apps/web-mzima-client/src/app/post/post-metadata/post-metadata.component.scss
@import 'helpers';

.post-info {
  display: flex;
  font-size: 12px;
  line-height: 1.3;
  color: #313538;
  font-weight: 400;
  align-items: center;
  justify-content: flex-start;

  @include breakpoint-max($tablet) {
    padding-top: 2px;
    padding-bottom: 2px;
  }

  &__visual {
    flex: 0 0 34px;
    overflow: hidden;
    position: relative;
    border-radius: 50%;
    margin-inline-end: 16px;

    @include breakpoint-max($tablet) {
      margin-inline-end: 8px;
    }

    &:before {
      content: '';
      display: block;
      padding-top: 100%;
    }

    img {
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
      position: absolute;
    }
  }

  &__content {
    flex: 1 1 100%;
  }

  &__username {
    display: block;
    font-size: 14px;
    line-height: 1.3;
    margin-bottom: 4px;

    @include breakpoint-max($tablet) {
      font-size: 12px;
      margin-bottom: 0;
      line-height: 1.38;
    }
  }

  &__list {
    display: flex;
    flex-wrap: wrap;
    margin: 0 -8px -4px;
    align-items: flex-start;
    justify-content: flex-start;
    color: var(--color-neutral-70);
  }

  &__item {
    padding: 0 8px;
    margin-bottom: 4px;
    position: relative;

    &:not(:first-child) {
      &:before {
        left: 0;
        top: 50%;
        content: '';
        border: 1px solid;
        border-radius: 50%;
        position: absolute;
        margin: -1px 0 0 -1px;
      }
    }
  }
}

.post {
  &__border {
    top: 0;
    bottom: 0;
    width: 10px;
    position: absolute;
    inset-inline-start: 0;
    background: var(--color);
    border-end-start-radius: 8px;
    border-start-start-radius: 8px;

    @include breakpoint-max($tablet) {
      width: 8px;
    }
  }
}

::ng-deep {
  .mat-dialog-content {
    .post {
      &__border {
        @include breakpoint-max($tablet) {
          top: -16px;
          bottom: -16px;
          inset-inline-start: -16px;
        }
      }
    }
  }
}

